v4.3.1/_sources/generated/generated/pcdsdevices.gauge.GCC500PLC.rst.txt
pcdsdevices.gauge.GCC500PLC
===========================

.. currentmodule:: pcdsdevices.gauge

.. autoclass:: GCC500PLC

   
   
    .. list-table:: Ophyd Device Components
       :header-rows: 1
       :widths: auto

       *  - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
   
       *  -  pressure
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``:PRESS_RBV``
          -  gauge pressure reading
          -  hinted
          -  Inherited from :class:`~pcdsdevices.gauge.GCCPLC`
   
       *  -  gauge_at_vac
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``:AT_VAC_RBV``
          -  gauge is at VAC
          -  normal
          -  Inherited from :class:`~pcdsdevices.gauge.GCCPLC`
   
       *  -  pressure_ok
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``:PRESS_OK_RBV``
          -  pressure reading ok
          -  normal
          -  Inherited from :class:`~pcdsdevices.gauge.GCCPLC`
   
       *  -  at_vac_setpoint
          -  :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          -  ``:VAC_SP``
          -  At vacuum setpoint for all gauges
          -  config
          -  Inherited from :class:`~pcdsdevices.gauge.GCCPLC`
   
       *  -  state
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``:STATE_RBV``
          -  state of the gauge
          -  hinted
          -  Inherited from :class:`~pcdsdevices.gauge.GCCPLC`
   
       *  -  high_voltage_on
          -  :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          -  ``:HV_SW``
          -  command to switch the high voltage on
          -  normal
          -  Inherited from :class:`~pcdsdevices.gauge.GCCPLC`
   
       *  -  high_voltage_disable
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``:HV_DIS_DO_RBV``
          -  enables the high voltage on the cold cathode gauge
          -  normal
          -  Inherited from :class:`~pcdsdevices.gauge.GCCPLC`
   
       *  -  protection_setpoint
          -  :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          -  ``:PRO_SP``
          -  Protection setpoint for ion gauges at which the gauge turns off
          -  normal
          -  Inherited from :class:`~pcdsdevices.gauge.GCCPLC`
   
       *  -  setpoint_hysterisis
          -  :class:`~ophyd.areadetector.base.EpicsSignalWithRBV`
          -  ``:SP_HYS``
          -  Protection setpoint hysteresis
          -  config
          -  Inherited from :class:`~pcdsdevices.gauge.GCCPLC`
   
       *  -  interlock_ok
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``:ILK_OK_RBV``
          -  Interlock is ok
          -  normal
          -  Inherited from :class:`~pcdsdevices.gauge.GCCPLC`
   
       *  -  high_voltage_is_on
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``:HV_ON_RBV``
          -  state of the HV
          -  normal
          -  
   
       *  -  disc_active
          -  :class:`~ophyd.signal.EpicsSignalRO`
          -  ``:DISC_ACTIVE_RBV``
          -  discharge current active
          -  normal
          -  
   

   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   
   

   
   


    
    
    .. rubric:: Methods

    .. autosummary::
       :toctree: generated
    
       ~GCC500PLC.configure
       ~GCC500PLC.describe
       ~GCC500PLC.get
       ~GCC500PLC.read
       ~GCC500PLC.read_configuration
       ~GCC500PLC.stop
       ~GCC500PLC.summary
       ~GCC500PLC.trigger
    
    

    
    
    .. rubric:: Attributes

    .. autosummary::
    
       ~GCC500PLC.configuration_attrs
       ~GCC500PLC.connected
       ~GCC500PLC.hints
       ~GCC500PLC.kind
    
    